@startuml
class User{
  - String username
  - String email
  - Boolean activated
  }

class Role{
    - String description
    - String roleName

}

class UserData {
    - String firstName
    - String lastName
    - String address
    - String phoneNumber
}
User "1" --* "1" UserData
User "n" -- "m" Role
@enduml